--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "^5.2.1",
     "express-rate-limit": "^8.2.1",
     "helmet": "^8.1.0",
-    "mongoose": "^8.23.0"
+    "mongoose": "^8.23.0",
+    "winston": "^3.19.0"
   }
 }
