--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "",
   "license": "Apache-2.0",
   "description": "",
+  "overrides": {
+    "jsdom": "24.1.3"
+  },
   "devDependencies": {
     "@express-rate-limit/tsconfig": "^1.0.2",
     "@types/bcrypt": "^6.0.0",
@@ -18,7 +21,9 @@
     "@types/express": "^5.0.6",
     "@types/express-rate-limit": "^5.1.3",
     "@types/helmet": "^0.0.48",
+    "@types/jsdom": "^27.0.0",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^25.2.3",
     "bcrypt": "^6.0.0",
     "nodemon": "^3.1.11",
@@ -28,16 +33,20 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "cloudinary": "^2.9.0",
     "compression": "^1.8.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.6",
+    "dompurify": "^3.3.1",
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
     "express-rate-limit": "^8.2.1",
     "express-validator": "^7.3.1",
     "helmet": "^8.1.0",
+    "jsdom": "24.1.3",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^8.23.0",
+    "multer": "^2.0.2",
     "winston": "^3.19.0"
   }
 }
